Correct overflow scrolling support
Added check overflow-scrolling with to Modernizr build
CSS only “App” style scrolling when it is
Now regular scrolling still works when it isn't

--- a/www/sass/_normalise.scss
+++ b/www/sass/_normalise.scss
@@ -130,9 +130,3 @@ img {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-touch-callout: none;
 }
-
-%ios_scroll_contain {
-	height: 100%;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-}
